--- a/apps/wallet/localization/src/main/res/values/strings.xml
+++ b/apps/wallet/localization/src/main/res/values/strings.xml
@@ -260,4 +260,7 @@
     <string name="search_browser">Search or enter address</string>
     <string name="explore">Explore</string>
     <string name="connected">Connected</string>
+
+    <string name="select_token">Select token</string>
+    <string name="close">Close</string>
 </resources>
