Swap start screen

--- a/apps/wallet/localization/src/main/res/values-ru/strings.xml
+++ b/apps/wallet/localization/src/main/res/values-ru/strings.xml
@@ -264,6 +264,7 @@
     <string name="connected">Подключённые</string>
     <string name="browser_search_placeholder">Введите адрес или начните поиск</string>
 
+    <string name="swap_token">Обменять</string>
     <string name="select_token">Выберите токен</string>
     <string name="close">Закрыть</string>
 </resources>
