--- a/apps/wallet/localization/src/main/res/values/strings.xml
+++ b/apps/wallet/localization/src/main/res/values/strings.xml
@@ -268,6 +268,7 @@
     <string name="connected">Connected</string>
     <string name="browser_search_placeholder">Enter an address or search the web</string>
 
-    <string name="select_token">Select token</string>
+    <string name="swap_token">Swap</string>
+    <string name="select_token">Choose token</string>
     <string name="close">Close</string>
 </resources>
