--- a/apps/wallet/localization/src/main/res/values-ru/strings.xml
+++ b/apps/wallet/localization/src/main/res/values-ru/strings.xml
@@ -278,4 +278,5 @@
     <string name="blockchain_fee">Комиссия блокчейна</string>
     <string name="route">Маршрут</string>
     <string name="provider">Провайдер</string>
+    <string name="confirm_swap_capital">Подтвердить обмен</string>
 </resources>
