--- a/apps/wallet/localization/src/main/res/values/strings.xml
+++ b/apps/wallet/localization/src/main/res/values/strings.xml
@@ -282,4 +282,5 @@
     <string name="blockchain_fee">Blockchain fee</string>
     <string name="route">Route</string>
     <string name="provider">Provider</string>
+    <string name="confirm_swap_capital">Confirm Swap</string>
 </resources>
