--- a/apps/wallet/localization/src/main/res/values-ru/strings.xml
+++ b/apps/wallet/localization/src/main/res/values-ru/strings.xml
@@ -282,4 +282,5 @@
     <string name="price_impact_info">Разница между рыночной и расчетной ценой из-за размера сделки.</string>
     <string name="minimum_received_info">Ваша сделка вернется назад, если до ее подтверждения произойдет сильное, неблагоприятное движение цены.</string>
     <string name="liquidity_provider_fee_info">Часть каждой сделки идет поставщикам ликвидности в качестве поощрения по протоколу.</string>
+    <string name="insufficient_balance_buy">Недостаточно средств. Купить %1$s</string>
 </resources>
