--- a/apps/wallet/localization/src/main/res/values/strings.xml
+++ b/apps/wallet/localization/src/main/res/values/strings.xml
@@ -312,4 +312,9 @@
     <string name="minimum_received_info">Your transaction will revert if there is a large, unfavorable price movement before it is confirmed.</string>
     <string name="liquidity_provider_fee_info">A portion of each trade goes to liquidity providers as a protocol incentive.</string>
     <string name="insufficient_balance_buy">Insufficient balance. Buy %1$s</string>
+    <string name="slippage">Slippage</string>
+    <string name="slippage_description">The amount the price can change unfavorably before the trade reverts</string>
+    <string name="slippage_hint">Custom %</string>
+    <string name="expert_mode">Expert Mode</string>
+    <string name="expert_mode_description">Allows high price impact trades. Use at your own risk.</string>
 </resources>
