--- a/apps/wallet/localization/src/main/res/values/strings.xml
+++ b/apps/wallet/localization/src/main/res/values/strings.xml
@@ -317,4 +317,6 @@
     <string name="slippage_hint">Custom %</string>
     <string name="expert_mode">Expert Mode</string>
     <string name="expert_mode_description">Allows high price impact trades. Use at your own risk.</string>
+    <string name="suggested">Suggested</string>
+    <string name="other">Other</string>
 </resources>
