--- a/apps/wallet/localization/src/main/res/values-ru/strings.xml
+++ b/apps/wallet/localization/src/main/res/values-ru/strings.xml
@@ -110,6 +110,7 @@
     <string name="buy_or_sell">Торговля</string>
     <string name="fiat_open_description">Вы открываете внешнее приложение, которым не управляет Tonkeeper.</string>
     <string name="buy">Купить</string>
+    <string name="sell">Продать</string>
     <string name="search">Поиск</string>
     <string name="country_title">Выберите вашу страну</string>
     <string name="intro_description">Создайте новый кошелек или добавьте существующий</string>
@@ -317,4 +318,7 @@
     <string name="expert_mode_description">Позволяет совершать сделки с высокой погрешностью. Используйте на свой страх и риск.</string>
     <string name="suggested">Предлагаемые</string>
     <string name="other">Другие</string>
+    <string name="payment_method_credit">Кредитная карта</string>
+    <string name="payment_method_credit_rub">Кредитная карта  ·  RUB</string>
+    <string name="payment_method_crypto">Криптовалюта</string>
 </resources>
